# Goyais

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh-CN.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  GOVERNANCE.md  GOVERNANCE.zh-CN.md  LICENSE  MAINTAINERS.md  MAINTAINERS.zh-CN.md  Makefile  README.md  README.zh-CN.md  SECURITY.md  SECURITY.zh-CN.md  SUPPORT.md  docker-compose.full.yml  go.mod  go.sum  openai.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs  (+2 more)
apps/mobile/src-tauri/: Cargo.toml  tauri.conf.json
runtime/python-agent/: .env.example  package.json  pyproject.toml
runtime/python-agent/app/: __init__.py  config.py  context.py  deps.py  errors.py  main.py  protocol_version.py  trace.py
runtime/python-agent/migrations/: 0001_init.sql  0002_sync_state.sql  0003_event_protocol_version.sql  0004_tool_confirmations_status.sql  0005_system_events.sql  0006_trace_refactor_v2.sql  0007_remote_gateway_context.sql  0008_model_provider_matrix.sql  0009_cleanup_test_projects.sql  0010_drop_sync_tables.sql
runtime/python-agent/tests/: conftest.py  test_agent_loop.py  test_api_model_configs.py  test_api_projects.py  test_api_runs.py  test_api_sessions.py  test_command_guard.py  test_confirmation_flow.py  test_diagnostics_redaction.py  test_error_model_http.py  test_events_envelope.py  test_execution_service_worktree.py  test_file_tools_security.py  test_hub_auth_required.py  test_internal_executions_commit.py  test_migration_cleanup_projects.py  test_path_guard.py  test_run_flow.py  test_run_service_graph.py  test_secret_resolve_integration.py  test_trace_propagation_events.py  test_trace_user_injection.py
services/worker/: README.md  pyproject.toml
services/worker/app/: errors.py  execution_engine.py  hub_client.py  internal_api.py  main.py  model_adapters.py  model_google_payload.py  model_turns.py  routes.py  tls_config.py  tool_runtime.py  trace.py  version.py
services/worker/tests/: conftest.py  test_claim_loop_controls.py  test_command_guard.py  test_execution_engine_context.py  test_health.py  test_internal_tokens.py  test_model_adapters.py  test_model_turns_tls.py  test_port.py  test_routes.py  test_stub_routes.py  test_subagent_tools.py  test_tls_config.py  test_tool_runtime_run_command.py  test_version.py
(+2114 files in other folders)
