[project]
name = "goyais-python-agent"
version = "0.2.0"
description = "Goyais Python runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.11",
  "uvicorn>=0.34.0",
  "sse-starlette>=2.2.1",
  "pydantic>=2.10.6",
  "orjson>=3.10.15",
  "aiosqlite>=0.21.0",
  "langgraph>=0.5.0",
  "deepagents>=0.0.8",
  "openai>=1.66.3",
  "anthropic>=0.49.0",
  "jsonschema>=4.23.0",
  "unidiff>=0.7.5",
  "httpx>=0.28.1"
]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.25.3",
  "ruff>=0.11.0"
]
